--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ debug = true    # Symbols are nice, and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
-default = []
+default = ["esp-idf-sys/ble"]
 
 experimental = ["esp-idf-svc/experimental"]
 
@@ -46,3 +46,4 @@ once_cell = "1.21.3"
 
 [build-dependencies]
 embuild = "0.33"
+uuid = { version = "1", features = ["v4"] }
